media queries menu.html en proceso. Lío con las flexbox e intentar reutilizar clases

--- a/menu.html
+++ b/menu.html
@@ -88,36 +88,44 @@
                             </section>
 
                         </div>
-                        <section class="breakfast columna" id="breakfast">
+                        <section class="breakfast columnaM" id="breakfast">
                             <article class="meal">
                                 <div class="cardImgCont"><img src="images/t1.jpg" alt=""></div>
-                                <h3>Chicken burguer with cheese and butter<span class="price"
-                                        title="cheap cheap!">$95</span></h3>
-                                <p>Vegetable and tea with milk and chocolate</p>
-                                <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                <div class="texto">
+                                    <h3>Chicken burguer with cheese and butter<span class="price"
+                                            title="cheap cheap!">$95</span></h3>
+                                    <p>Vegetable and tea with milk and chocolate</p>
+                                    <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
                             </article>
-                            <article class="meal">
+                            <article class="meal row">
                                 <div class="cardImgCont"><img src="images/t4.jpg" alt=""></div>
-                                <h3>Coffee and tea with milk and chocolate.<span class="price"
-                                        title="cheap cheap!">$30</span></h3>
-                                <span></span>
-                                <p>Vegetable and tea with milk and chocolate</p>
-                                <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                <div class="columnaM">
+                                    <h3>Coffee and tea with milk and chocolate.<span class="price"
+                                            title="cheap cheap!">$30</span></h3>
+                                    <span></span>
+                                    <p>Vegetable and tea with milk and chocolate</p>
+                                    <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
                             </article>
-                            <article class="meal">
+                            <article class="meal row">
                                 <div class="cardImgCont"><img src="images/t3.jpg" alt=""></div>
-                                <h3>Milanesa with salad and fries<span class="price" title="cheap cheap!">$65</span>
-                                </h3>
-                                <span></span>
-                                <p>Vegetable and tea with milk and chocolate</p>
-                                <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                <div class="columnaM">
+                                    <h3>Milanesa with salad and fries<span class="price" title="cheap cheap!">$65</span>
+                                    </h3>
+                                    <span></span>
+                                    <p>Vegetable and tea with milk and chocolate</p>
+                                    <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
                             </article>
-                            <article class="meal">
+                            <article class="meal row">
                                 <div class="cardImgCont"><img src="images/t2.jpg" alt=""></div>
-                                <h3>Hot pizza with extra cheese and butter<span class="price"
-                                        title="cheap cheap!">$65</span></h3>
-                                <p>Vegetable and tea with milk and chocolate</p>
-                                <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                <div class="columnaM">
+                                    <h3>Hot pizza with extra cheese and butter<span class="price"
+                                            title="cheap cheap!">$65</span></h3>
+                                    <p>Vegetable and tea with milk and chocolate</p>
+                                    <a href="#" class="enlace">Order now<i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
                             </article>
                         </section>
                     </div>
