layout de menu.html para desktop y tablet conseguido, falta afinar paddings y margins

--- a/menu.html
+++ b/menu.html
@@ -88,7 +88,7 @@
                             </section>
 
                         </div>
-                        <section class="breakfast columnaM" id="breakfast">
+                        <section class="breakfast columna" id="breakfast">
                             <article class="meal">
                                 <div class="cardImgCont"><img src="images/t1.jpg" alt=""></div>
                                 <div class="texto">
@@ -100,7 +100,7 @@
                             </article>
                             <article class="meal row">
                                 <div class="cardImgCont"><img src="images/t4.jpg" alt=""></div>
-                                <div class="columnaM">
+                                <div class="texto">
                                     <h3>Coffee and tea with milk and chocolate.<span class="price"
                                             title="cheap cheap!">$30</span></h3>
                                     <span></span>
@@ -110,7 +110,7 @@
                             </article>
                             <article class="meal row">
                                 <div class="cardImgCont"><img src="images/t3.jpg" alt=""></div>
-                                <div class="columnaM">
+                                <div class="texto">
                                     <h3>Milanesa with salad and fries<span class="price" title="cheap cheap!">$65</span>
                                     </h3>
                                     <span></span>
@@ -120,7 +120,7 @@
                             </article>
                             <article class="meal row">
                                 <div class="cardImgCont"><img src="images/t2.jpg" alt=""></div>
-                                <div class="columnaM">
+                                <div class="texto">
                                     <h3>Hot pizza with extra cheese and butter<span class="price"
                                             title="cheap cheap!">$65</span></h3>
                                     <p>Vegetable and tea with milk and chocolate</p>
