--- a/menu.html
+++ b/menu.html
@@ -45,12 +45,17 @@
             </div>
             <nav class="row container">
                 <h1 class="logo" title="Rovers"><a href="#"><img src="images/logo.png" alt="logo"></a></h1>
-                <div class="hamburguesa" href="#">
-                    <!-- en unicode &#9776; -->
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
+                <input class="inputOculto" type="radio" id="off" name="ocultarMenu">
+                <input class="inputOculto" type="radio" id="on" name="ocultarMenu">
+                <!-- los inputs de arriba sirven para desplegar el menú desde la hamburguesa y cerrarlo desde el último elemento de la lista. Se hace sólo con CSS a través de la herencia de éstos, y gracias a los label se puede cambiar su estado para usar pseudoclases -->
+                <label for="on">
+                    <div class="hamburguesa" href="#">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </label>
+                <!-- en unicode &#9776; -->
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="#" class="activo">Menu</a></li>
@@ -58,9 +63,10 @@
                     <li><a href="index.html#ourservices">Services</a></li>
                     <li><a href="index.html#aboutus">About</a></li>
                     <li><a href="#">item 6 </a></li>
+                    <li><label class="btnCerrar" for="off">&#215;</label></li>
+
                 </ul>
             </nav>
-
         </header>
         <main class="menuPage">
             <div class="container-fluid">
@@ -73,11 +79,13 @@
                     <div class="flex">
                         <div class="columna">
                             <nav class="menuMenu">
+
                                 <ul>
                                     <li><a class="active" href="#breakfast">Breakfast</a></li>
                                     <li><a href="#">Lunch</a></li>
                                     <li><a href="#">Dinner</a></li>
                                     <li><a href="#">Others</a></li>
+
                                 </ul>
                             </nav>
                             <section class="offers">
