menu responsive reparado; el auto format on save tiene el peligro de que si intentas 'hacer debug' con deshacer en el IDE y guardas para ver los cambios progresivamente, el formateo se considera un cambio y no deja avanzar hacia delante....

--- a/menu.html
+++ b/menu.html
@@ -48,12 +48,10 @@
                 <input class="inputOculto" type="radio" id="off" name="ocultarMenu">
                 <input class="inputOculto" type="radio" id="on" name="ocultarMenu">
                 <!-- los inputs de arriba sirven para desplegar el menú desde la hamburguesa y cerrarlo desde el último elemento de la lista. Se hace sólo con CSS a través de la herencia de éstos, y gracias a los label se puede cambiar su estado para usar pseudoclases -->
-                <label for="on">
-                    <div class="hamburguesa" href="#">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                <label for="on" class="hamburguesa">
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </label>
                 <!-- en unicode &#9776; -->
                 <ul class="menu">
