--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
             </div>
             <nav class="row container">
                 <h1 class="logo" title="Rovers"><a href="#"><img src="images/logo.png" alt="logo"></a></h1>
-                <input class="inputOculto" type="radio" id="off" name="ocultarMenu">
+                <input class="inputOculto" type="radio" id="off" name="ocultarMenu" checked>
                 <input class="inputOculto" type="radio" id="on" name="ocultarMenu">
                 <!-- los inputs de arriba sirven para desplegar el menú desde la hamburguesa y cerrarlo desde el último elemento de la lista. Se hace sólo con CSS a través de la herencia de éstos, y gracias a los label se puede cambiar su estado para usar pseudoclases -->
                 <label for="on" class="hamburguesa">
