--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>lastest news and thougts about Rover's hamburguers</title>
-
+    <link rel="icon" href="images/favicon.png">
+    <meta name="description" content="Our amazing blog will show you news, know how's and much more about Rover's and it's delicious way of doing things">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -59,7 +60,7 @@
                     <li><a href="#" class="activo">Blog</a></li>
                     <li><a href="index.html#ourservices">Services</a></li>
                     <li><a href="index.html#aboutus">About</a></li>
-                    <li><a href="#">item 6 </a></li>
+                    <li><a href="#">Nothing yet</a></li>
                     <li><label class="btnCerrar" for="off">&#215;</label></li>
                 </ul>
             </nav>
